Доработал ситуацию неполучения данных карты с сервера

--- a/index.html
+++ b/index.html
@@ -231,6 +231,12 @@
     </div>
   </template>
 
+  <template id="error-data">
+    <div class="error-data">
+      <p class="error-data__message">Ошибка получения данных для отображения на карте</p>
+    </div>
+  </template>
+
   <script src="leaflet/leaflet.js" crossorigin=""></script>
   <script src="js/main.js" type="module"></script>
 </body>
